# jsonrefl

./: LICENSE  README.md
benchmark/: CMakeLists.txt  main.cpp
demo/: CMakeLists.txt  main.cpp
include/jsonrefl/: jsonrefl.hpp
tests/: CMakeLists.txt  main.cpp  main.hpp
validation/: CMakeLists.txt  main.cpp
